[gsoc2020] Merge django-netjsonconfig & openwisp-controller

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --create-db --reuse-db --nomigrations openwisp_controller/geo/tests
+addopts = -p no:warnings --create-db --reuse-db --nomigrations openwisp_controller/geo/tests
 DJANGO_SETTINGS_MODULE = tests.openwisp2.settings
 python_files = pytest_*.py
