--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal=1
 
 [isort]
-known_third_party = django,django_netjsonconfig,django_x509
+known_third_party = django,django_x509
 known_first_party = openwisp_users, openwisp_utils
 default_section = THIRDPARTY
 skip = migrations
